--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "react-demo",
+  "name": "react-immutable-multienv",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bro-fs": "^0.6.0",
     "debug": "^4.1.1",
     "pino": "^5.13.5",
     "pino-debug": "^1.3.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
-    "streamsaver": "^2.0.3"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "nohup npm start > /dev/null &"
+    "serve": "untracked/serve.sh",
+    "deploy": "untracked/deploy.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
