ci(semantic-release): Disable dryRun for semantic-release
semantic release is now managing releases for the project

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "release": {
     "branch": "master",
     "ci": false,
-    "dryRun": true
+    "dryRun": false
   },
   "scripts": {
     "start": "react-scripts start",
