--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "debug": "^4.1.1",
     "pino": "^5.13.5",
     "pino-debug": "^1.3.0",
@@ -13,7 +15,7 @@
   "release": {
     "branch": "master",
     "ci": false,
-    "dryRun": true
+    "dryRun": false
   },
   "scripts": {
     "start": "react-scripts start",
